[package]
name = "itoa"
version = "0.4.5" # remember to update html_root_url
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Fast functions for printing integer primitives to an io::Write"
repository = "https://github.com/dtolnay/itoa"
documentation = "https://github.com/dtolnay/itoa"
categories = ["value-formatting"]
readme = "README.md"
exclude = ["performance.png"]
edition = "2018"

[features]
default = ["std"]
i128 = []
std = []
with-testing = ["testing"]

[badges]
travis-ci = { repository = "dtolnay/itoa" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies.testing]
branch = "rsgx1.1.1"
git = "https://github.com/sammyne/testing-rsgx"
optional = true

[dependencies.sgx_tstd]
features = ["thread"]
git = "https://github.com/apache/teaclave-sgx-sdk"
rev = "v1.1.1"

